Refactored Tooltip code

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <header id="main-header">
       <h1>Project Planner</h1>
     </header>
+    <section id="add-project">
+      <button class="add-project">Add Project</button>
+    </section>
     <div id="app"></div>
   </body>
 </html>
